# squirrel

./: Cargo.toml
squirrel-connect/: Cargo.toml
squirrel-connect/src/: connect.rs  lib.rs  manager.rs
squirrel-connect/src/utils/: mod.rs  status.rs
squirrel-connect/tests/: connect.rs
