[package]
name = "squirrel-connect"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = {version = "0.1.40", default-feature = false, features = ["async-await", "std", "attributes"]}
sqlx = {version = "0.8.2", default-feature = false, features = []}
url = {version = "2.5.2"}

[dev-dependencies]
tokio = {version = "1.40.0", default-feature = false, features = ["test-util", "macros"]}
sqlx = {version = "0.8.2", default-feature = false, features = ["runtime-tokio"]}

[features]
default = [
]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
